subida de imaGen

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -201,6 +201,18 @@ const metadata = {
         title: 'Brazil',
         description: '3456 Lorem Ipsum St, 34567, São Paulo',
       },
+      {
+        title: 'Brazil',
+        description: '3456 Lorem Ipsum St, 34567, São Paulo',
+      },
+      {
+        title: 'Brazil',
+        description: '3456 Lorem Ipsum St, 34567, São Paulo',
+      },
+      {
+        title: 'Brazil',
+        description: '3456 Lorem Ipsum St, 34567, São Paulo',
+      },
     ]}
   />
 
